perms-summary: fix long names overflow.
- fixes #5336

--- a/rhodecode/public/css/main.less
+++ b/rhodecode/public/css/main.less
@@ -456,7 +456,6 @@ ul.auth_plugins {
     }
 
     .radios {
-	   float: right;
         position: relative;
         width: 405px;
     }
