--- a/rhodecode/public/css/tables.less
+++ b/rhodecode/public/css/tables.less
@@ -147,6 +147,10 @@ table.dataTable {
             white-space: nowrap;
         }
 
+        &.td-name {
+
+        }
+
         &.td-journalaction {
             min-width: 300px;
 
